# fast_zero

./: .dockerignore  README.md  compose.yaml  fly.toml  pyproject.toml
.github/workflows/: fly-deploy.yml  pipeline.yaml
fast_zero/: app.py  models.py  schemas.py  security.py
fast_zero/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 301cb822b13b_add_update_and_create_in_todo.py  6d1037477d34_create_todos_table.py  a24def0b5d43_add_updated_at_in_users.py  f81ec95bb5c2_create_users_table.py
tests/: conftest.py  test_ap.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todo.py  test_users.py
